# pet-circle

./: .gitignore  AUDIT_COMPLETION_SUMMARY.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_LOGIC_AUDIT_REPORT.md  FINAL_STATUS_2026_04_27.md  FRONTEND_AUDIT.md  FRONTEND_REFACTOR_CHECKLIST.md  FRONTEND_REFACTOR_INDEX.md  LLM_PROMPTS_REFERENCE.md  PHASES_3_TO_7_IMPLEMENTATION.md  PHASE_2_7_EXECUTION_GUIDE.md  PHASE_4_AND_TESTING_COMPLETE.md  PHASE_4_TESTING_IMPLEMENTATION.md  PHASE_B_INTEGRATION_GUIDE.md  QUICK_REFERENCE_PHASE_4_COMPLETION.md  REFACTORING_COMPLETE_STATUS.md  REFACTORING_STATUS.md  REFACTOR_COMPLETION.md  REFACTOR_EXAMPLES.md  REFACTOR_SUMMARY.md  REPOSITORY_ADOPTION_AUDIT.md  REPOSITORY_ADOPTION_DELIVERY_SUMMARY.md  REPOSITORY_ADOPTION_PLAN.md  REPOSITORY_PHASE_A_COMPLETE.md  REPOSITORY_REFACTORING_STATUS.md  REPOSITORY_STATUS_DASHBOARD.md  SUPPLEMENT_CAPTURE_FIX.md  _chat.txt.bak  bug-log.md  issue.txt  plan_micronutrient_fix.md  render.yaml
backend/: DB_Tables_Report.xlsx  db_schema_extractor.py  fix_imports.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/envs/: .env.example  .env.production.example  .env.test
backend/migrations/: 000_add_conditions_contacts.sql  001_add_dashboard_tables.sql  002_nutrition_cache_tables.sql  003_hygiene_columns.sql  004_condition_phase5_columns.sql  005_nudge_engine.sql  006_document_event_date.sql  007_medicine_name_optional_vaccines.sql  008_custom_preventive_items.sql  009_hygiene_tip_cache.sql  010_dog_dhppi_puppy_vaccines.sql  011_dog_mandatory_vaccines.sql  012_pet_ai_insights.sql  013_orders_payment_fields.sql  014_agent_onboarding_sessions.sql  015_agent_order_sessions.sql  016_user_dashboard_link_pending.sql  017_performance_indexes.sql  018_documents_storage_backend.sql  019_document_rejection.sql  (+59 more)
(+467 files in other folders)
