[project]
name = "petcircle-backend"
version = "1.0.0"
description = "PetCircle Phase 1 — WhatsApp preventive pet health system"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # FastAPI Depends() in default args — valid pattern
    "B904",   # raise without from in except — pervasive codebase style
    "E402",   # module import not at top — test files set env before imports
    "E712",   # == True/False comparison — pervasive codebase style
    "E711",   # == None comparison — pervasive codebase style
    "E722",   # bare except — isolated cases
    "E701",   # multiple statements on one line
    "SIM105", # use contextlib.suppress — style preference
    "SIM102", # collapsible if — style preference
    "SIM117", # multiple with statements — style preference
    "SIM108", # if-else instead of ternary — style preference
    "SIM110", # reimplemented builtin — style preference
    "SIM115", # open file with context manager — style preference
    "SIM201", # negate equal op — style preference
    "N806",   # non-lowercase variable in function — often intentional
    "N812",   # lowercase imported as non-lowercase — often intentional
    "B007",   # unused loop control variable — often intentional
    "F403",   # star import — legacy modules
    "F405",   # name from star import — legacy modules
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
